@@ -8,6 +8,8 @@ Next Release (will be 4.0)
 * Minimum Django version is now Django 3.2.
 * Added compatibility with Django 4.1.
 * Removed deprecated static files handling in favor of ``django.contrib.staticfiles``.
+* Removed deprecated automatic routing of ``http`` protocol handler in ProtocolTypeRouter.
+  You must explicitly register the ``http`` handler in your application.
 
 3.0.5 (2022-06-24)
 ------------------
